syntax = "proto3";

package proto.services.task_svc.v1;

option go_package = "gen/proto/services/task-svc";

//
// CreateBed
//

message CreateBedRequest {
	string room_id = 1; // @gotags: validate:"uuid4"
}

message CreateBedResponse {
	string id = 1;
}

//
// BulkCreateBeds
//

message BulkCreateBedsBed {
	string id = 1;
}

message BulkCreateBedsRequest {
	string room_id = 1; // @gotags: validate:"uuid4"
	uint32 amount_of_beds = 2; // @gotags: validate:"required"
}

message BulkCreateBedsResponse {
	repeated BulkCreateBedsBed beds = 1;
}

//
// GetBed
//

message GetBedRequest {
	string id = 1; // @gotags: validate:"uuid4"
}

message GetBedResponse {
	string id = 1;
	string room_id = 2;
}

//
// GetBeds
//

message GetBedsBed {
	string id = 1;
	string room_id = 2;
}

// TODO: Scope by organization
message GetBedsRequest {}

message GetBedsResponse {
	repeated GetBedsBed beds = 1;
}

//
// GetBedsByRoom
//

message GetBedsByRoomBed {
	string id = 1;
}

message GetBedsByRoomRequest {
	string room_id = 1; // @gotags: validate:"uuid4"
}

message GetBedsByRoomResponse {
	repeated GetBedsByRoomBed beds = 1;
}

//
// UpdateBed
//

message UpdateBedRequest {
	string id = 1; // @gotags: validate:"uuid4"
	optional string room_id = 2;
}

message UpdateBedResponse {}

//
// DeleteBed
//

message DeleteBedRequest {
	string id = 1; // @gotags: validate:"uuid4"
}

message DeleteBedResponse {}

//
// BedService
//

service BedService {
	rpc CreateBed(CreateBedRequest) returns (CreateBedResponse) {}
	rpc BulkCreateBeds(BulkCreateBedsRequest) returns (BulkCreateBedsResponse) {}
	rpc GetBed(GetBedRequest) returns (GetBedResponse) {}
	rpc GetBeds(GetBedsRequest) returns (GetBedsResponse) {}
	rpc GetBedsByRoom(GetBedsByRoomRequest) returns (GetBedsByRoomResponse) {}
	rpc UpdateBed(UpdateBedRequest) returns (UpdateBedResponse) {}
	rpc DeleteBed(DeleteBedRequest) returns (DeleteBedResponse) {}
}
