syntax = "proto3";

package proto.services.task_svc.v1;

option go_package = "gen/proto/services/task-svc";

//
// CreateRoom
//

message CreateRoomRequest {
	string name = 1; // @gotags: validate:"required"
	uint32 amount_of_beds = 2; // @gotags: validate:"required"
}

message CreateRoomResponse {
	string id = 1;
}

//
// GetRoom
//

message GetRoomBedOfRoom {
	string id = 1;
}

message GetRoomRequest {
	string id = 1; // @gotags: validate:"uuid4"
}

message GetRoomResponse {
	string id = 1;
	string name = 2;
	repeated GetRoomBedOfRoom beds = 3;
}

//
// GetRooms
//

message GetRoomsBedOfRooms {
	string id = 1;
}

message GetRoomsRoom {
	string id = 1;
	string name = 2;
	repeated GetRoomsBedOfRooms beds = 3;
}

message GetRoomsRequest {}

message GetRoomsResponse {
	repeated GetRoomsRoom rooms = 1;
}

//
// GetRoomsByWard
//

message GetRoomsByWardBedOfRooms {
	string id = 1;
}

message GetRoomsByWardRoom {
	string id = 1;
	string name = 2;
	repeated GetRoomsBedOfRooms beds = 3;
}

message GetRoomsByWardRequest {
	string ward_id = 1; // @gotags: validate:"uuid4"
}

message GetRoomsByWardResponse {
	repeated GetRoomsRoom rooms = 1;
}

//
// UpdateRoom
//

message UpdateRoomRequest {
	string id = 1; // @gotags: validate:"uuid4"
	optional string name = 2;
}

message UpdateRoomResponse {}

//
// AddBedsToRoom
//

message AddBedsToRoomRequest {
	string id = 1; // @gotags: validate:"uuid4"
	uint32 amount_of_beds = 3;
}

message AddBedsToRoomResponse {}

//
// RoomService
//

service RoomService {
	rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
	rpc GetRoom(GetRoomRequest) returns (GetRoomResponse) {}
	rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse) {}
	rpc AddBedsToRoom(AddBedsToRoomRequest) returns (AddBedsToRoomResponse) {}
}
